--- a/templates/books.html
+++ b/templates/books.html
@@ -12,10 +12,10 @@
     {% block content %}
 
     {% for books in books %}
-    {{ book.isbn }}
-    {{ book.title }}
-    {{ book.author }}
-    {{ book.ratings_count}}
+    {{ books.isbn }}
+    {{ books.title }}
+    {{ books.author }}
+    {{ books.ratings_count}}
     {% endfor %}
 
     {% endblock %}
