--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <title>Base.html</title>
 </head>
 <body>
     
     <div class="container">
     {% block content %} {% endblock %}
   </div>
+  
+<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
