--- a/templates/edit_books.html
+++ b/templates/edit_books.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+    <title>Document</title>
+</head>
+<body>
+    
 {% extends 'index.html'%} {% block content %}
 
 <h3>Edit books</h3>
@@ -9,3 +22,7 @@
 {% endfor %}
 
 {% endblock %}
+
+<script type="text/javascript" src="js/materialize.min.js"></script>
+</body>
+</html>
