Edited boilerplates for all htmls

--- a/templates/edit_books.html
+++ b/templates/edit_books.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-{% extends 'index.html'%} {% block content %}
+{% extends 'base.html'%} {% block content %}
 
 <h3>Edit books</h3>
 
