--- a/templates/edit_books.html
+++ b/templates/edit_books.html
@@ -23,6 +23,7 @@
 
 {% endblock %}
 
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="scripts/materialize.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.js"></script>
 </body>
 </html>
