--- a/templates/books.html
+++ b/templates/books.html
@@ -22,6 +22,7 @@
 
     {% endblock %}
 
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="scripts/materialize.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.js"></script>
 </body>
 </html>
