--- a/templates/books.html
+++ b/templates/books.html
@@ -1,28 +1,54 @@
+{% extends 'base.html'%} 
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <title>Document</title>
-</head>
-<body>
-    {% extends 'base.html'%} 
-    {% block content %}
+ <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+    </div>
+  </nav>
+    
+  <!--<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Drop Me!</a>-->
 
-    {% for books in books %}
-    {{ books.isbn }}
-    {{ books.title }}
-    {{ books.author }}
-    {{ books.ratings_count}}
-    {% endfor %}
+  <!--<ul id='dropdown1' class='dropdown-content'>-->
+  <!--  {% for books in books %}-->
+  <!--  <li><a href="#!">{{ books.isbn }}</a></li>-->
+  <!--  <li><a href="#!">{{ books.title }}</a></li>-->
+  <!--  <li><a href="#!">{{ books.authors }}</a></li>-->
+  <!--  <li><a href="#!">{{ books.ratings_count}}</a></li>-->
+    
+  <!--</ul>-->
+        
+    <!--{% endfor %}-->
+    
+     <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
 
     {% endblock %}
-
-<script type="text/javascript" src="scripts/jquery.js"></script>
-<script type="text/javascript" src="scripts/materialize.min.js"></script>
-</body>
-</html>
