Books Collection Mockup done

--- a/templates/books_collection.html
+++ b/templates/books_collection.html
@@ -10,12 +10,18 @@
                     <img class="activator cslewis" src="/static/images/cslewis.jpg">
                 </div>
                 <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                    <span class="card-title activator grey-text text-darken-4">
+                        <p>Title: {{book.title}}</p>
+                        <p>Author: {{book.authors}}</p>
+                        <i class="material-icons right">more_vert</i></span>
                     <p><a href="#">This is a link</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    <p>Rating: {{book.rating}}</p>
+                    <p>Language: {{book.language_code}}</p>
+                    <p>No. of Pages: {{book.num_pages}}</p>
                 </div>
             </div>
         </div>
