--- a/templates/books_collection.html
+++ b/templates/books_collection.html
@@ -14,7 +14,8 @@
                         <p>Title: {{book.title}}</p>
                         <p>Author: {{book.authors}}</p>
                         <i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">This is a link</a></p>
+                    <p><a href="{{url_for('edit_book', book_id=book._id)}}">Edit</a></p>
+                    <p><a href="#">Delete</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
