--- a/templates/edit_book.html
+++ b/templates/edit_book.html
@@ -2,5 +2,102 @@
 
 <h1>Edit Book</h1>
 
+<form action="{{ url_for('update_book', book_id=book._id)}}" method="POST" class="book_form">
+    <div class="row">
+        <div class="input-field col s12">
+            <i class="material-icons prefix">subject</i>
+            <input id="title" name="title" type="text" value="{{book.title}}" required>
+            <label for="title"><span>* </span>Add Title</label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="input-field col s12">
+            <i class="material-icons prefix">subject</i>
+            <input id="author" name="authors" type="text" value="{{book.authors}}" required>
+            <label for="author"><span>* </span>Add Author</label>
+        </div>
+    </div>
 
+    <div class="row">
+        <label><span>* </span>Rating</label>
+        <p>
+            {% if book.rating == 1 %}
+            <input class="with-gap" name="rating" type="radio" id="one" value="1" checked/> {% else %}
+            <input class="with-gap" name="rating" type="radio" id="one" value="1" /> {% endif %}
+            <label for="one">1 Star</label>
+        </p>
+
+        <p>
+            {% if book.rating == 2 %}
+            <input class="with-gap" name="rating" type="radio" id="two" value="2" checked/> {% else %}
+            <input class="with-gap" name="rating" type="radio" id="two" value="2" /> {% endif %}
+            <label for="two">2 Stars</label>
+        </p>
+
+        <p>
+            {% if book.rating == 3 %}
+            <input class="with-gap" name="rating" type="radio" id="three" value="3" checked/> {% else %}
+            <input class="with-gap" name="rating" type="radio" id="three" value="3" /> {% endif %}
+            <label for="three">3 Stars</label>
+        </p>
+
+        <p>
+            {% if book.rating == 4 %}
+            <input class="with-gap" name="rating" type="radio" id="four" value="4" checked/> {% else %}
+            <input class="with-gap" name="rating" type="radio" id="four" value="4" /> {% endif %}
+            <label for="four">4 Stars</label>
+        </p>
+
+        <p>
+            {% if book.rating == 5 %}
+            <input class="with-gap" name="rating" type="radio" id="5" value="5" checked/> {% else %}
+            <input class="with-gap" name="rating" type="radio" id="5" value="5" /> {% endif %}
+            <label for="5">5 Stars</label>
+        </p>
+    </div>
+
+    <div class="row">
+        <div class="input-field col s12 m6">
+            <select id="language" name="language_code" required>
+          <option value="" disabed selected>Choose language</option>
+            {% if book.language_code == "eng" %}
+             <option value="eng" selected>eng</option>
+            {% else %}
+            <option value="eng">eng</option>
+            {% endif %}
+            
+            {% if book.language_code == "en-US" %}  
+            <option value="en-US" selected>en-US</option>
+            {% else %}
+            <option value="en-US">en-US</option>  
+            {% endif %}
+        </select>
+            <label><span>* </span>language Select</label>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="input-field col s12">
+            <i class="material-icons prefix">subject</i>
+            <input id="num_pages" name="num_pages" type="text" value="{{book.num_pages}}" required>
+            <label for="num_pages"><span>* </span>Add Number Of Pages</label>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="input-field col s12">
+            <i class="material-icons prefix">subject</i>
+            <input id="isbn13" name="isbn13" type="number" value="{{book.isbn13}}"required>
+            <label for="isbn13"><span>* </span>Add ISBN if available</label>
+        </div>
+    </div>
+
+    <div class="row">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Save Changes
+        <i class="material-icons right">playlist_add</i>
+      </button>
+        <a href="{{url_for('get_books')}}" class="btn"><i class="material-icons right">cancel</i>Cancel</a>
+    </div>
+
+</form>
 {% endblock %}
