--- a/templates/search_books.html
+++ b/templates/search_books.html
@@ -1,8 +1,8 @@
 {% extends 'base.html'%} {% block content %}
 
-<h1>Books Collection</h1>
+<h1>Search Books</h1>
 <div class="row">
-    {% for book in books %}
+    {% for book in search_books %}
     <div class="container">
         <div class="col s12 m6 l3">
             <div class="card">
