--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,3 +3,11 @@
     margin-top: 200px; 
     
 }
+
+.nav-wrapper {
+    background-color: #3e2723;
+}
+
+background {
+    background-color: red;
+}
