--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,12 @@
           <li><a href="{{url_for('index')}}">Home</a></li>
           <li><a href="{{url_for('add_book')}}">Add Book</a></li>
           <li><a href="{{url_for('get_books')}}">Books Collection</a></li>
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Books<i class="material-icons right">arrow_drop_down</i></a>
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Links<i class="material-icons right">arrow_drop_down</i></a>
             <ul id="dropdown1" class="dropdown-content">
-              <li><a href="">Asia</a></li>
-              <li><a href="">The Americas</a></li>
-              <li><a href="">Europe</a></li>
-              <li><a href="">Rest Of The World</a></li>
+              <li><a href="">??</a></li>
+              <li><a href="">??</a></li>
+              <li><a href="">??</a></li>
+              <li><a href="">??</a></li>
             </ul>
           </li>
         </ul>
@@ -66,10 +66,10 @@
 
         <div class="col s12 m6 footer-social">
           <p>Keep In Touch</p>
-          <span><a href="https://github.com/Paddlepop25" target="_blank" class="white-text"><i class="fab fa-github fa-2x"></i></a></span>
-          <span><a href="https://www.linkedin.com/in/lindahsu007/" target="_blank" class="white-text"><i class="fab fa-linkedin-in fa-2x"></i></a></span>
-          <span><a href="https://twitter.com/shecodeshsucode" target="_blank" class="white-text"><i class="fab fa-twitter fa-2x"></i></a></span>
-          <span><a href="https://www.instagram.com/shecodeshsucodes/" target="_blank" class="white-text"><i class="fab fa-instagram fa-2x"></i></a></span>
+          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-github fa-2x"></i></a></span>
+          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-linkedin-in fa-2x"></i></a></span>
+          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-twitter fa-2x"></i></a></span>
+          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-instagram fa-2x"></i></a></span>
           <p class="design">&copy; Designed by Jimmy Hsu, 2019</p>
           <small>For educational purpose</small>
         </div>
