--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 {% extends 'base.html'%} {% block content %}
 
-<h1>index</h1>
-
  <div class="row welcome-page">
       <div class="col s12 welcome-box">
         <div class="row">
-          <h4>Welcome to InstaRamen!</h1>
+          <h4>Jimbo's Goodreads</h4>
         </div>
         <div class="row">
           <form class="col s12" action="{{ url_for('search_books') }}">
