--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -4,10 +4,7 @@
     
 }
 
-.nav-wrapper {
-    background-color: #3e2723;
-}
+/*.nav-wrapper {*/
+/*    background-color: #3e2723;*/
+/*}*/
 
-background {
-    background-color: red;
-}
