--- a/templates/base.html
+++ b/templates/base.html
@@ -43,29 +43,27 @@
           <li><a href="{{url_for('index')}}">Home</a></li>
           <li><a href="{{url_for('add_book')}}">Add Book</a></li>
           <li><a href="{{url_for('get_books')}}">Books Collection</a></li>
-          <li><a href="">Ramen from Asia</a></li>
-          <li><a href="">Ramen from The Americas</a></li>
-          <li><a href="">Ramen from Europe</a></li>
-          <li><a href="">Ramen from Rest Of The World</a></li>
         </ul>
       </div>
     </nav>
   </header>
 
-  {% block content %} {% endblock %}
+  {% block content %} 
+  {% endblock %}
+  
   <div class="container-fluid">
     <footer class="page-footer">
       <div class="row">
         <div class="col s12 m6 footer-logo">
           <div class="website-info">
-            <a href="{{url_for('index')}}" class="brand-logo"><img class="ramen_logo" src="{{ url_for('static', filename='images/goodreads_icon.png') }}" alt="good books"/></a>
+            <a href="{{url_for('index')}}" class="brand-logo"><img class="books_logo" src="{{ url_for('static', filename='images/goodreads_icon.png') }}" alt="good books"/></a>
             <a href="{{url_for('index')}}" class="white-text">Jimbo's Goodreads</a>
           </div>
-          <p>This website is for instant ramen lovers who wish to view different kinds of ramen from all over the world. Also, new ramens could be added to the list for everyone to enjoy.</p>
+          <p>lorem ipsum</p>
         </div>
 
         <div class="col s12 m6 footer-social">
-          <p>Keep In Touch</p>
+          <p>Social Media</p>
           <span><a href="??" target="_blank" class="white-text"><i class="fab fa-github fa-2x"></i></a></span>
           <span><a href="??" target="_blank" class="white-text"><i class="fab fa-linkedin-in fa-2x"></i></a></span>
           <span><a href="??" target="_blank" class="white-text"><i class="fab fa-twitter fa-2x"></i></a></span>
