Added background pic

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html'%} {% block content %}
 
+<img src="/static/bookshelf.jpeg" alt="bookshelf">
  <div class="row welcome-page">
       <div class="col s12 welcome-box">
         <div class="row">
