--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 <body>
   <header>
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper lime darken-3">
         <a href="{{url_for('index')}}" class="brand-logo"><img class="book_logo" src="{{ url_for('static', filename='images/goodreads_icon.png') }}" alt="good books"/></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
@@ -52,7 +52,7 @@
   {% endblock %}
   
   <div class="container-fluid">
-    <footer class="page-footer">
+    <footer class="page-footer lime darken-3">
       <div class="row">
         <div class="col s12 m6 footer-logo">
           <div class="website-info">
