Edited database and reimport

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montser|Poppins|Roboto&display=swap" rel="stylesheet">
   <link rel="icon" href="" type="image/x-icon" />
   <link rel="stylesheet" href="/static/styles/style.css" type="text/css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  
 
   <!-- Meta Data -->
   <meta charset="UTF-8">
@@ -47,6 +49,7 @@
       </div>
     </nav>
   </header>
+  
 
   {% block content %} 
   {% endblock %}
@@ -75,9 +78,9 @@
     </footer>
   </div>
 
+  <script type="text/javascript" src="./static/scripts/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <!--<script type="text/javascript" src="./static/scripts/app.js"></script>-->
   <script type="text/javascript">
     $(document).ready(function() {
       $(".button-collapse").sideNav();
