Added background pic

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="" type="image/x-icon" />
   <link rel="stylesheet" href="/static/styles/style.css" type="text/css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  
+
 
   <!-- Meta Data -->
   <meta charset="UTF-8">
@@ -49,11 +49,10 @@
       </div>
     </nav>
   </header>
-  
 
-  {% block content %} 
-  {% endblock %}
-  
+
+  {% block content %} {% endblock %}
+
   <div class="container-fluid">
     <footer class="page-footer lime darken-3">
       <div class="row">
