--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,3 +1,21 @@
 body {
-    background-image: url("/static/bookshelf.jpeg");
+  background-image: url("/static/images/bookshelf.jpeg");
+  background-size: cover;
 }
+
+h1, h4{
+    text-align: center;
+    color: white;
+}
+
+.search-button {
+    text-align: center;
+}
+
+.page-footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:200px; 
+}
+
