--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -2,6 +2,7 @@
 
 <h1>Add Book</h1>
 
+<div class="container">
 <form action="{{ url_for('insert_book')}}" method="POST" class="book_form">
     <div class="row">
         <div class="input-field col s12">
@@ -81,5 +82,6 @@
     </div>
     
 </form>
+</div>
 {% endblock %}
 
