--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Montser|Poppins|Roboto&display=swap" rel="stylesheet">
-  <link rel="icon" href="" type="image/x-icon" />
-  <link rel="stylesheet" href="/static/styles/style.css" type="text/css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montser|Poppins|Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/static/styles/style.css" type="text/css" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+  
 
 
   <!-- Meta Data -->
@@ -25,7 +26,7 @@
 <body>
   <header>
     <nav>
-      <div class="nav-wrapper lime darken-3">
+      <div class="nav-wrapper lime darken-4">
         <a href="{{url_for('index')}}" class="brand-logo"><img class="book_logo" src="{{ url_for('static', filename='images/goodreads_icon.png') }}" alt="good books"/></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
@@ -54,7 +55,7 @@
   {% block content %} {% endblock %}
 
   <div class="container-fluid">
-    <footer class="page-footer lime darken-3">
+    <footer class="page-footer lime darken-4">
       <div class="row">
         <div class="col s12 m6 footer-logo">
           <div class="website-info">
