--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,19 @@
 {% extends 'base.html'%} {% block content %}
 
-
+<div class="searchbox">
  <div class="row welcome-page">
       <div class="col s12 welcome-box">
         <div class="row">
-          <h4>Jimbo's Goodreads</h4>
+          <h1>Welcome</br> to</br> Jimbo's Goodreads</h1>
         </div>
         <div class="row">
           <form class="col s12" action="{{ url_for('search_books') }}">
             <div class="row">
               <div class="input-field col s12">
-                <input id="search" name="query" type="text" class="validate">
+                <input id="search" name="query" type="text" class="validate s-input">
                 <label for="search">Search for Any Book by Title or Author</label>
                 <div class="search-button">
-                  <button class="btn waves-effect waves-light blue lighten-1" type="submit" name="action">Search</button>
+                  <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Search</button>
                 </div>
               </div>
             </div>
@@ -22,5 +22,5 @@
       </div>
     </div> 
   </div>
-
+  
 {% endblock %}
