Added Navbar logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
   <header>
     <nav>
       <div class="nav-wrapper lime darken-4">
-        <a href="{{url_for('index')}}" class="brand-logo"><img class="book_logo" src="{{ url_for('static', filename='images/goodreads_icon.png') }}" alt="good books"/></a>
+        <a href="{{url_for('index')}}" class="brand-logo"><img class="book_logo" src="{{ url_for('static', filename='images/goodreads_logo.png') }}" alt="good books"/></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="{{url_for('index')}}">Home</a></li>
