CSS work commences

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,10 +35,10 @@
           <li><a href="{{url_for('get_books')}}">Books Collection</a></li>
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Links<i class="material-icons right">arrow_drop_down</i></a>
             <ul id="dropdown1" class="dropdown-content">
-              <li><a href="">??</a></li>
-              <li><a href="">??</a></li>
-              <li><a href="">??</a></li>
-              <li><a href="">??</a></li>
+              <li><a href="https://www.goodreads.com/">Goodreads</a></li>
+              <li><a href="https://www.librarything.com/">Library Thing</a></li>
+              <li><a href="https://bookriot.com/">Book Riot</a></li>
+              <li><a href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&node=283155">Amazon Books</a></li>
             </ul>
           </li>
         </ul>
@@ -59,20 +59,19 @@
       <div class="row">
         <div class="col s12 m6 footer-logo">
           <div class="website-info">
-            <a href="{{url_for('index')}}" class="brand-logo"><img class="books_logo" src="{{ url_for('static', filename='images/goodreads_icon.png') }}" alt="good books"/></a>
+            <a href="{{url_for('index')}}" class="brand-logo"><img class="book_logo" src="{{ url_for('static', filename='images/book-icon.png') }}" alt="good books"/></a>
             <a href="{{url_for('index')}}" class="white-text">Jimbo's Goodreads</a>
           </div>
-          <p>lorem ipsum</p>
+          <p>Look-up/Add/Edit/Delete all you want!</p>
         </div>
 
         <div class="col s12 m6 footer-social">
           <p>Social Media</p>
-          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-github fa-2x"></i></a></span>
-          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-linkedin-in fa-2x"></i></a></span>
-          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-twitter fa-2x"></i></a></span>
-          <span><a href="??" target="_blank" class="white-text"><i class="fab fa-instagram fa-2x"></i></a></span>
+          <span><a href="https://www.facebook.com/Tongue.Kung.Fu" target="_blank" class="white-text"><i class="fab fa-facebook fa-2x"></i></a></span>
+          <span><a href="https://www.instagram.com/papadum_is_nice/" target="_blank" class="white-text"><i class="fab fa-instagram fa-2x"></i></a></span>
+          <span><a href="https://www.linkedin.com/in/jihsu/" target="_blank" class="white-text"><i class="fab fa-linkedin-in fa-2x"></i></a></span>
           <p class="design">&copy; Designed by Jimmy Hsu, 2019</p>
-          <small>For educational purpose</small>
+          <small>For Educational Purposes</small>
         </div>
       </div>
     </footer>
