--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -24,3 +24,8 @@ h1, h4{
     height:200px; 
 }
 
+.container {
+ background-color: rgba(255, 255, 255,);  
+ backdrop-filter: blur(6px);
+ border-radius: 30px
+}
