--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -75,10 +75,10 @@
     </div>
 
     <div class="row">
-      <button class="btn waves-effect waves-light" type="submit" name="action">Add Book
+      <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Add Book
         <i class="material-icons right">playlist_add</i>
       </button>
-      <a href="{{url_for('get_books')}}" class="btn"><i class="material-icons right">cancel</i>Cancel</a>
+      <a href="{{url_for('get_books')}}" class="btn waves-effect waves-light red accent-4"><i class="material-icons right">cancel</i>Cancel</a>
     </div>
     
 </form>
