--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html'%} {% block content %}
 
+<div class="container welcome">
 <div class="searchbox">
  <div class="row welcome-page">
       <div class="col s12 welcome-box">
@@ -21,6 +22,7 @@
         </div>
       </div>
     </div> 
+  </div>
   </div>
   
 {% endblock %}
