--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
  <div class="row welcome-page">
       <div class="col s12 welcome-box">
         <div class="row">
-          <h1>Welcome</br> to</br> Jimbo's Goodreads</h1>
+          <h1>Welcome to</br> Jimbo's Goodreads</h1>
         </div>
         <div class="row">
           <form class="col s12" action="{{ url_for('search_books') }}">
