Fixed Nav side links

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,14 @@
           <li><a href="{{url_for('index')}}">Home</a></li>
           <li><a href="{{url_for('add_book')}}">Add Book</a></li>
           <li><a href="{{url_for('get_books')}}">Books Collection</a></li>
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Links<i class="material-icons right">arrow_drop_down</i></a>
+            <ul id="dropdown1" class="dropdown-content">
+              <li><a href="https://www.goodreads.com/">Goodreads</a></li>
+              <li><a href="https://www.librarything.com/">Library Thing</a></li>
+              <li><a href="https://bookriot.com/">Book Riot</a></li>
+              <li><a href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&node=283155">Amazon Books</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
