--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 
   <div class="container-fluid">
     <footer class="page-footer lime darken-4">
-      <div class="row">
+      <div class="row sm-text">
         <div class="col s12 m6 footer-logo">
           <div class="website-info">
             <a href="{{url_for('index')}}" class="brand-logo"><img class="book_logo" src="{{ url_for('static', filename='images/book-icon.png') }}" alt="good books"/></a>
