--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,27 @@
 {% extends 'base.html'%} {% block content %}
 
-<div class="container welcome">
-<div class="searchbox">
- <div class="row welcome-page">
-      <div class="col s12 welcome-box">
-        <div class="row">
-          <h1>Welcome to</br> Jimbo's Goodreads</h1>
-        </div>
-        <div class="row">
-          <form class="col s12" action="{{ url_for('search_books') }}">
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="search" name="query" type="text" class="validate s-input">
-                <label for="search">Search for Any Book by Title or Author</label>
-                <div class="search-button">
-                  <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Search</button>
-                </div>
+<div class="container-fluid welcome">
+  <div class="row welcome-page">
+    <div class="welcome-box"></div>
+    <div class="welcome-search">
+      <div class="row">
+        <h1>Welcome to</br> Jimbo's Goodreads</h1>
+      </div>
+      <div class="row">
+        <form class="welcome-form" action="{{ url_for('search_books') }}">
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="search" name="query" type="text" class="validate s-input">
+              <label for="search">Search by Title or Author</label>
+              <div class="search-button">
+                <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Search</button>
               </div>
             </div>
-          </form>
-        </div>
+          </div>
+        </form>
       </div>
-    </div> 
+    </div>
   </div>
-  </div>
-  
+</div>
+
 {% endblock %}
