--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,33 +1,97 @@
 body {
-  background-image: url("/static/images/bookshelf.jpeg");
-  background-size: cover;
+    /*background-image: url("/static/images/bookshelf.jpeg");*/
 }
 
-.book_logo  {
- max-height: 65px;
- max-width: 65px;
+.book_logo {
+    width: 4rem;
 }
 
-h1, h4{
+h1,
+h4 {
     text-align: center;
     color: white;
 }
 
-.search-button {
+.welcome {
+    background-image: url("/static/images/bookshelf.jpeg");
+    background-size: cover;
+    /*height: 30rem;*/
+}
+
+.welcome-box {
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(6px);
+    border-radius: 30px;
+    position: relative;
+    top: 1rem;
+    width: 80%;
+    height: 300px;
+    margin: 0 auto;
+}
+
+.welcome-search {
+    position: relative;
+    top: -20rem;
+}
+
+.welcome-form {
+    width: 70%;
+    margin: 0 auto;
     text-align: center;
 }
 
-.page-footer {
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:200px; 
+.welcome-page {
+    margin-bottom: 0;
 }
 
-.container {
- background-color: rgba(255, 255, 255, 0.1);  
- backdrop-filter: blur(6px);
- border-radius: 30px
+/*.search-button {*/
+
+/*    text-align: center;*/
+
+/*}*/
+
+.page-footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 222px;
+}
+
+.footer-logo p {
+    position: relative;
+    top: -13px;
+}
+
+.footer-social {
+    position: relative;
+    top: -24px;
+}
+
+.footer-social span {
+    position: relative;
+    top: -13px;
+}
+
+.design {
+    position: relative;
+    top: -26px;
+}
+
+.footer-social small {
+    position: relative;
+    top: -44px;
+}
+
+.sm-text {
+    /*position: relative;*/
+    /*top: -7rem;*/
+}
+
+@media(min-width:768px) {
+    .welcome-form {
+        position: relative;
+        top: -3rem;
+    }
 }
 
 @media(min-width:320px) and (max-width:767px) {
