Fixed Add Book CSS

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,8 @@
             <a href="{{url_for('index')}}" class="brand-logo"><img class="book_logo" src="{{ url_for('static', filename='images/book-icon.png') }}" alt="good books"/></a>
             <a href="{{url_for('index')}}" class="white-text">Jimbo's Goodreads</a>
           </div>
-          <p>Look-up/Add/Edit/Delete all you want!</p>
+          <p>Search/Add/Edit/Delete all the books you want!</p>
+          <p>A site for book lovers. Let all your friends and family know about this fantastic website!</p>
         </div>
 
         <div class="col s12 m6 footer-social">
