--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
         <form class="welcome-form" action="{{ url_for('search_books') }}">
           <div class="row">
             <div class="input-field col s12">
-              <input id="search" name="query" type="text" class="validate s-input">
-              <label for="search">Search by Title or Author</label>
+              <input id="search" name="query" type="text" class="white-text validate s-input">
+              <label class="white-text" for="search">Search by Title or Author</label>
               <div class="search-button">
                 <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Search</button>
               </div>
