--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,6 @@
 body {
-    /*background-image: url("/static/images/bookshelf.jpeg");*/
+    background-image: url("/static/images/bookshelf.jpeg");
+    background-repeat: no-repeat;
 }
 
 .book_logo {
@@ -15,6 +16,7 @@ h4 {
 .welcome {
     background-image: url("/static/images/bookshelf.jpeg");
     background-size: cover;
+    background-repeat: no-repeat;
     /*height: 30rem;*/
 }
 
@@ -44,17 +46,28 @@ h4 {
     margin-bottom: 0;
 }
 
-/*.search-button {*/
+ /*Add book page*/
+.book_form {
+    background: white;
+    border-radius: 15px;
+    padding: 25px;
+    margin-bottom: 20px;
+}
 
-/*    text-align: center;*/
+/* Search page*/
 
-/*}*/
+.no-result {
+    text-align: center;
+    margin-bottom: 12rem;
+}
+
+/* Footer page*/
 
 .page-footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 222px;
+    /*height: 222px;*/
 }
 
 .footer-logo p {
@@ -62,10 +75,6 @@ h4 {
     top: -13px;
 }
 
-.footer-social {
-    position: relative;
-    top: -24px;
-}
 
 .footer-social span {
     position: relative;
@@ -83,14 +92,36 @@ h4 {
 }
 
 .sm-text {
-    /*position: relative;*/
-    /*top: -7rem;*/
+    margin-bottom: 0;
+}
+
+@media(min-width:601px) {
+    .no-result {
+        margin-bottom: 20rem;
+    }
+    .sm-text {
+        margin-left: 5rem;
+
+    }
 }
 
 @media(min-width:768px) {
     .welcome-form {
         position: relative;
         top: -3rem;
+    }
+    .sm-text {
+        margin-left: 7rem;
+
+    }
+}
+
+@media(min-width:1024px) {
+    .sm-text {
+        margin-left: 12rem;
+    }
+    .no-result {
+        margin-bottom: 30rem;
     }
 }
 
