--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -3,7 +3,8 @@
 <h1>Add Book</h1>
 
 <div class="container">
-<form action="{{ url_for('insert_book')}}" method="POST" class="book_form">
+    <div class="book_form">
+<form action="{{ url_for('insert_book')}}" method="POST">
     <div class="row">
         <div class="input-field col s12">
             <i class="material-icons prefix">subject</i>
@@ -82,6 +83,7 @@
     </div>
     
 </form>
+</div>
 </div>
 {% endblock %}
 
