--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,6 +1,8 @@
 body {
     background-image: url("/static/images/bookshelf.jpeg");
+    background-size: cover;
     background-repeat: no-repeat;
+    font-size: 16px;
 }
 
 .book_logo {
@@ -46,7 +48,8 @@ h4 {
     margin-bottom: 0;
 }
 
- /*Add book page*/
+/*Add book page*/
+
 .book_form {
     background: white;
     border-radius: 15px;
@@ -59,6 +62,17 @@ h4 {
 .no-result {
     text-align: center;
     margin-bottom: 12rem;
+}
+
+/* Books collection page*/
+
+.card .card-content {
+    overflow-y: scroll;
+    min-height: 260px;
+}
+
+.card-content p {
+    font-size: 1rem;
 }
 
 /* Footer page*/
