--- a/templates/search_books.html
+++ b/templates/search_books.html
@@ -8,7 +8,7 @@
         <div class="col s12 m6 l3">
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator cslewis" src="/static/images/cslewis.jpg">
+                    <img class="activator cslewis" src="/static/images/Generic-bookcover.jpg">
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">
