Amended footer styling

--- a/templates/search_books.html
+++ b/templates/search_books.html
@@ -4,7 +4,7 @@
 {% if search_books|length > 0 %}
 <div class="row">
     {% for book in search_books %}
-    <div class="container">
+    <div class="container search_books">
         <div class="col s12 m6 l3">
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
