--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -15,11 +15,8 @@ h4 {
     color: white;
 }
 
-.welcome {
-    background-image: url("/static/images/bookshelf.jpeg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    /*height: 30rem;*/
+.welcome h1 {
+    font-size: 3.2rem;
 }
 
 .welcome-box {
@@ -29,13 +26,13 @@ h4 {
     position: relative;
     top: 1rem;
     width: 80%;
-    height: 300px;
+    height: 370px;
     margin: 0 auto;
 }
 
 .welcome-search {
     position: relative;
-    top: -20rem;
+    top: 2rem;
 }
 
 .welcome-form {
@@ -44,79 +41,123 @@ h4 {
     text-align: center;
 }
 
-.welcome-page {
-    margin-bottom: 0;
+.welcome-search label {
+    text-align: center;
+}
+
+.book-suggestion-box {
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(6px);
+    border-radius: 30px;
+    padding-top: 1rem;
+    position: relative;
+    top: -0.5rem;
+    width: 80%;
+    height: 1350px;
+    margin: 0 auto;
+}
+
+.book-suggestion-box p {
+    color: white;
 }
 
 /*Add book page*/
 
 .book_form {
     background: white;
+    opacity: 0.9;
     border-radius: 15px;
-    padding: 25px;
-    margin-bottom: 20px;
+    padding: 30px;
+    /*height: 1000px;*/
+    margin-bottom: 14rem;
+}
+
+.book_form .input-field {
+    margin-top: 20px;
+}
+
+.add-book button {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.add-book a {
+    width: 100%;
+    margin-top: 20px;
 }
 
 /* Search page*/
-
-.no-result {
-    text-align: center;
-    margin-bottom: 12rem;
+.search_books .card {
+    min-height: 1000px;
+    overflow-y: scroll;
 }
+/*.no-result {*/
+
+/*    text-align: center;*/
+
+/*    margin-bottom: 12rem;*/
+
+/*}*/
 
 /* Books collection page*/
 
-.card .card-content {
-    overflow-y: scroll;
-    min-height: 260px;
-}
+/*.card .card-content {*/
 
-.card-content p {
-    font-size: 1rem;
-}
+/*    overflow-y: scroll;*/
 
-/* Footer page*/
+/*    min-height: 260px;*/
 
-.page-footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    /*height: 222px;*/
-}
+/*}*/
 
-.footer-logo p {
-    position: relative;
-    top: -13px;
-}
+/*.card-content p {*/
 
+/*    font-size: 1rem;*/
 
-.footer-social span {
-    position: relative;
-    top: -13px;
-}
+/*}*/
 
-.design {
-    position: relative;
-    top: -26px;
-}
+/* Footer */
 
-.footer-social small {
-    position: relative;
-    top: -44px;
-}
+ .footer-logo p {
+     position: relative;
+     top: -13px;
+ }
 
-.sm-text {
-    margin-bottom: 0;
-}
+ .footer-social span {
+     position: relative;
+     top: -13px;
+ }
 
+ .design {
+     position: relative;
+     top: -26px;
+ }
+
+ .footer-social small {
+     position: relative;
+     top: -44px;
+ }
+
+ .sm-text {
+     margin-bottom: 0;
+ }
+ 
 @media(min-width:601px) {
-    .no-result {
-        margin-bottom: 20rem;
+    .book-suggestion-box {
+        height: 880px;
     }
-    .sm-text {
-        margin-left: 5rem;
-
+    .book-suggestion p {
+        margin-left: 8rem;
     }
+    
+    .page-footer {
+        padding-left: 6rem;
+    }
+    /*.no-result {*/
+    /*    margin-bottom: 20rem;*/
+    /*}*/
+    /*.sm-text {*/
+    /*    margin-left: 5rem;*/
+    /*}*/
 }
 
 @media(min-width:768px) {
@@ -124,24 +165,44 @@ h4 {
         position: relative;
         top: -3rem;
     }
-    .sm-text {
-        margin-left: 7rem;
-
+    
+    .book-suggestion img {
+        padding-left: 3rem;
     }
+    
+    /*.footer-social {*/
+        /*padding-left: 6rem;*/
+    /*}*/
+
+    /*.sm-text {*/
+    /*    margin-left: 7rem;*/
+    /*}*/
 }
 
 @media(min-width:1024px) {
-    .sm-text {
-        margin-left: 12rem;
+    .book-suggestion img {
+        padding-left: 7rem;
     }
-    .no-result {
-        margin-bottom: 30rem;
+    
+      .page-footer {
+        padding-left: 11rem;
+    }
+    /*.sm-text {*/
+    /*    margin-left: 12rem;*/
+    /*}*/
+    /*.no-result {*/
+    /*    margin-bottom: 30rem;*/
+    /*}*/
+}
+
+@media (min-width: 2000px) {
+    .book-suggestion img {
+        padding-left: 13rem;
     }
 }
 
-@media(min-width:320px) and (max-width:767px) {
-    h1 {
-        position: relative;
-        font-size: 25px;
-    }
-}
+/*@media (min-width: 1440px) {*/
+/*    .book-suggestion img {*/
+/*        padding-left: 25rem;*/
+/*    }*/
+/*}*/
