--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,60 @@
 {% extends 'base.html'%} {% block content %}
 
 <div class="container-fluid welcome">
-  <div class="row welcome-page">
-    <div class="welcome-box"></div>
-    <div class="welcome-search">
-      <div class="row">
-        <h1>Welcome to</br> Jimbo's Goodreads</h1>
-      </div>
-      <div class="row">
-        <form class="welcome-form" action="{{ url_for('search_books') }}">
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="search" name="query" type="text" class="white-text validate s-input">
-              <label class="white-text" for="search">Search by Title or Author</label>
-              <div class="search-button">
-                <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Search</button>
+  <div class="row">
+    <div class="welcome-box">
+      <div class="welcome-search">
+        <div class="row">
+          <h1>Welcome to</br> Jimbo's Goodreads</h1>
+        </div>
+        <div class="row">
+          <form class="welcome-form" action="{{ url_for('search_books') }}">
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="search" name="query" type="text" class="white-text validate s-input">
+                <label class="white-text" for="search">Search by Title or Author</label>
+                <div class="search-button">
+                  <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Search</button>
+                </div>
               </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="book-suggestion-box">
+      <div class="book-suggestions">
+        <div class="row">
+          <h4>Book Suggestions</h4>
+        </div>
+        <div class="book-suggestion">
+          <div class="row">
+            <div class="col s12 m4">
+              <img src="/static/images/Generic-bookcover.jpg"></img>
+            </div>
+            <div class="col s12 m8">
+              <p>Book Sypnosis</p>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m4">
+              <img src="/static/images/Generic-bookcover.jpg"></img>
+            </div>
+            <div class="col s12 m8">
+              <p>Book Sypnosis</p>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 </div>
 
 {% endblock %}
