--- a/templates/books_collection.html
+++ b/templates/books_collection.html
@@ -4,7 +4,7 @@
 <div class="row">
     {% for book in books %}
     <div class="container">
-        <div class="col s12 m6 l3">
+        <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator cslewis" src="/static/images/Generic-bookcover.jpg">
@@ -13,19 +13,23 @@
                     <span class="card-title activator grey-text text-darken-4">
                         <p><strong>Title:</strong> {{book.title}}</p>
                         <p><strong>Author:</strong> {{book.authors}}</p>
+                             <div class="card-action">
                         <i class="material-icons right">more_vert</i></span>
                     <p><a href="{{url_for('edit_book', book_id=book._id)}}">Edit</a></p>
                     <p><a href="{{url_for('delete_book', book_id=book._id)}}" class="red-text">Delete</a></p>
                 </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                    <p><strong>Rating:</strong> {{book.rating}}</p>
-                    <p><strong>Language:</strong> {{book.language_code|upper}}</p>
-                    <p><strong>No. of Pages:</strong> {{book.num_pages}}</p>
-                </div>
+
+
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p><strong>Rating:</strong> {{book.rating}}</p>
+                <p><strong>Language:</strong> {{book.language_code|upper}}</p>
+                <p><strong>No. of Pages:</strong> {{book.num_pages}}</p>
             </div>
         </div>
     </div>
-    {% endfor %}
+</div>
+{% endfor %}
 </div>
 {% endblock %}
