--- a/templates/search_books.html
+++ b/templates/search_books.html
@@ -5,39 +5,57 @@
 <div class="row">
     {% for book in search_books %}
     <div class="container search_books">
-        <div class="col s12 m6 l3">
+        <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator cslewis" src="/static/images/Generic-bookcover.jpg">
                 </div>
                 <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">
-                        <p>Title: {{book.title}}</p>
-                        <p>Author: {{book.authors}}</p>
-                        <i class="material-icons right">more_vert</i></span>
-                    <p><a href="{{url_for('edit_book', book_id=book._id)}}">Edit</a></p>
-                    <p><a href="{{url_for('delete_book', book_id=book._id)}}">Delete</a></p>
+                    <p><strong>Title:</strong> {{book.title}}</p>
+                    <br>
+                    <p><strong>Author:</strong> {{book.authors}}</p>
+                    <div class="card-action">
+                        <i class="material-icons right">more_vert</i>
+                        <p><a href="{{url_for('edit_book', book_id=book._id)}}">Edit</a></p>
+                        <p><a href="{{url_for('delete_book', book_id=book._id)}}" class="red-text">Delete</a></p>
+                    </div>
                 </div>
                 <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    <p>Rating: {{book.rating}}</p>
-                    <p>Language: {{book.language_code}}</p>
-                    <p>No. of Pages: {{book.num_pages}}</p>
+                    <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                    <p><strong>Rating:</strong> {{book.rating}}</p>
+                    <p><strong>Language:</strong> {{book.language_code|upper}}</p>
+                    <p><strong>No. of Pages:</strong> {{book.num_pages}}</p>
                 </div>
             </div>
         </div>
     </div>
-    {% endfor %}
-    {% else %}
-        <div class="container no-result">
+    {% endfor %} {% else %}
+    <div class="container no-result">
         <div class="row">
-            <div class="col s12">
-                <h3 class="white-text">Oops!</br> No results found!</h3>
+            <div class="result-box">
+                <div class="welcome-search">
+                    <div class="row">
+                        <h4 class="white-text">Oops!</br> No results found!</h4>
+                        <h4 class="white-text">Please try again below</h4>
+                    </div>
+                    <div class="row">
+                        <form class="welcome-form" action="{{ url_for('search_books') }}">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="search" name="query" type="text" class="white-text validate s-input">
+                                    <label class="white-text" for="search">Search by Title or Author</label>
+                                    <div class="search-button">
+                                        <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Search</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-{% endif %} 
+    {% endif %}
 </div>
 
 {% endblock %}
