Styled books on index page

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -53,12 +53,16 @@ h4 {
     position: relative;
     top: -0.5rem;
     width: 80%;
-    height: 1350px;
+    height: 3000px;
     margin: 0 auto;
 }
 
 .book-suggestion-box p {
     color: white;
+}
+
+.book-description {
+    text-align: justify;
 }
 
 /*Add book page*/
@@ -87,13 +91,14 @@ h4 {
 }
 
 /* Search page*/
+
 .card .card-content p {
-  font-size: 1.2rem;
+    font-size: 1.2rem;
 }
 
 .card .card-content {
-  overflow-y: scroll;
-  max-height: 205px;
+    overflow-y: scroll;
+    max-height: 205px;
 }
 
 .result-box {
@@ -118,48 +123,54 @@ h4 {
 
 /*}*/
 
-
 /* Footer */
 
- .footer-logo p {
-     position: relative;
-     top: -13px;
- }
+.footer-logo p {
+    position: relative;
+    top: -13px;
+}
 
- .footer-social span {
-     position: relative;
-     top: -13px;
- }
+.footer-social span {
+    position: relative;
+    top: -13px;
+}
 
- .design {
-     position: relative;
-     top: -26px;
- }
+.design {
+    position: relative;
+    top: -26px;
+}
 
- .footer-social small {
-     position: relative;
-     top: -44px;
- }
+.footer-social small {
+    position: relative;
+    top: -44px;
+}
 
- .sm-text {
-     margin-bottom: 0;
- }
- 
+.sm-text {
+    margin-bottom: 0;
+}
+
+@media(min-width:425px) {
+    .book-suggestion-box {
+        height: 2650px;
+    }
+}
+
 @media(min-width:601px) {
     .book-suggestion-box {
-        height: 880px;
-    }
-    .book-suggestion p {
-        margin-left: 8rem;
+        height: 1600px;
     }
     
+    .book-suggestion p {
+        /*margin-left: 8rem;*/
+    }
+
     .page-footer {
         padding-left: 6rem;
     }
-    
+
     .result-box {
-    margin-bottom: 24rem;
-}
+        margin-bottom: 24rem;
+    }
 
     /*.no-result {*/
     /*    margin-bottom: 20rem;*/
@@ -174,26 +185,35 @@ h4 {
         position: relative;
         top: -1rem;
     }
-    
-    .book-suggestion img {
-        padding-left: 3rem;
-    }
-    
-    /*.footer-social {*/
-        /*padding-left: 6rem;*/
-    /*}*/
 
+    .book-suggestion img {
+        /*padding-left: 3rem;*/
+    }
+
+    /*.footer-social {*/
+    /*padding-left: 6rem;*/
+    /*}*/
     /*.sm-text {*/
     /*    margin-left: 7rem;*/
     /*}*/
 }
 
-@media(min-width:1024px) {
-    .book-suggestion img {
-        padding-left: 7rem;
+@media(min-width:993px) {
+    .book-suggestion-box {
+        height: 800px;
     }
     
-      .page-footer {
+    .book-suggestion-box img {
+        width: 12rem;
+    }
+}
+
+@media(min-width:1024px) {
+    .book-suggestion img {
+        /*padding-left: 7rem;*/
+    }
+
+    .page-footer {
         padding-left: 11rem;
     }
     /*.sm-text {*/
@@ -206,12 +226,16 @@ h4 {
 
 @media (min-width: 2000px) {
     .book-suggestion img {
-        padding-left: 13rem;
+        /*padding-left: 13rem;*/
     }
 }
 
 /*@media (min-width: 1440px) {*/
+
 /*    .book-suggestion img {*/
+
 /*        padding-left: 25rem;*/
+
 /*    }*/
+
 /*}*/
