--- a/templates/index.html
+++ b/templates/index.html
@@ -32,29 +32,48 @@
         </div>
         <div class="book-suggestion">
           <div class="row">
-            <div class="col s12 m4">
+            <div class="col s12 m6 l3 first-book">
               <img src="/static/images/Generic-bookcover.jpg"></img>
+              <div class="book-description">
+                <p>Book Sypnosis</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                  has been the industry's standard dummy text ever since the 1500s.</p>
+              </div>
             </div>
-            <div class="col s12 m8">
-              <p>Book Sypnosis</p>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s12 m4">
-              <img src="/static/images/Generic-bookcover.jpg"></img>
-            </div>
-            <div class="col s12 m8">
-              <p>Book Sypnosis</p>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-            </div>
-          </div>
-        </div>
 
+            <div class="col s12 m6 l3">
+              <img src="/static/images/Generic-bookcover.jpg"></img>
+              <div class="book-description">
+                <p>Book Sypnosis</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                  has been the industry's standard dummy text ever since the 1500s.</p>
+              </div>
+            </div>
+            
+            <div class="col s12 m6 l3">
+              <img src="/static/images/Generic-bookcover.jpg"></img>
+              <div class="book-description">
+                <p>Book Sypnosis</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                  has been the industry's standard dummy text ever since the 1500s.</p>
+              </div>
+            </div>
+            
+            <div class="col s12 m6 l3">
+              <img src="/static/images/Generic-bookcover.jpg"></img>
+              <div class="book-description">
+                <p>Book Sypnosis</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                  has been the industry's standard dummy text ever since the 1500s.</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
-  </div>
 
+  </div>
 </div>
 
 {% endblock %}
